[aliases]
test = pytest

[metadata]
platforms = any
license = LEYI PRIVATE LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Natural Language :: English
    Environment :: Web Environment
    Operating System :: OS Independent

[options]
setup_requires = pytest-runner;setuptools_scm
test_require = pytest
packages = find:
include_package_data = True

[tool:pytest]
python_files=*.py

